--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>I smell like Spottedleaf - home</title>
 <nav> WGBRG IYNN PROJILKSS </nav>
-  <a href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Have you ever wanted to smell like a stray from the White Hart Woods? Now you can!</h1>
