--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3>Also check out Scourge, Darktail, and Ashfur scent, as well as limited edition <b>Sol Scent</b>.</h3>
 <br>
 <h2>Products</h2>
-<div class="hush">
+<div id="hush">
 <h3>Spotted Perfume - Mint</h3>
 <p>Smell minty (and woodsy) fresh with this scent!</p>
 <p><b>$50</b></p>
