--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h3>Also check out Scourge, Darktail, and Ashfur scent, as well as limited edition <b>Sol Scent</b>.</h3>
 <br>
 <h2>Products</h2>
-<div>
-<h3>Spotted Perfume - Mint</h3>
-<p>Smell minty (and woodsy) fresh with this scent!</p>
-<p><b>$50</b></p>
-<button>Buy</button>
+<div class="minty">
+<h3 class="alsominty">Spotted Perfume - Mint</h3>
+<p class="veryminty">Smell minty (and woodsy) fresh with this scent!</p>
+<p class="veryminty"><b>$50</b></p>
+<button class="buytheminty">Buy</button>
 </div>
