--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <br>
 <h2>Products</h2>
 <div class="minty">
-<h3 class="alsominty">Spotted Perfume - Mint</h3>
-<p class="veryminty">Smell minty (and woodsy) fresh with this scent!</p>
-<p class="veryminty"><b>$50</b></p>
-<button class="buytheminty">Buy</button>
+<h3 class="minty">Spotted Perfume - Mint</h3>
+<p class="minty">Smell minty (and woodsy) fresh with this scent!</p>
+<p class="minty"><b>$50</b></p>
+<button class="minty">Buy</button>
 </div>
