--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>I smell like Spottedleaf - home</title>
-<nav> WGBRG IYNN PROJILKSS </nav>
+<nav> WGBRG IYNN PROJILKSS 
+  <a href='spottedleafscent.html'>Spottedleaf scents</a></nav>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,9 +12,3 @@
 <h3>Also check out Scourge, Darktail, and Ashfur scent, as well as limited edition <b>Sol Scent</b>.</h3>
 <br>
 <h2>Products</h2>
-<div class="minty">
-<h3>Spotted Perfume - Mint</h3>
-<p>Smell minty (and woodsy) fresh with this scent!</p>
-<p><b>$50</b></p>
-<button>Buy</button>
-</div>
